deploy/helloword-python.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: helloworld-python-v1
  namespace: default
spec:
  runLatest:
    configuration:
      build:
        apiVersion: build.knative.dev/v1alpha1
        kind: Build
        spec:
          serviceAccountName: build-bot
          source:
            git:
              url: https://github.com/toyking/knative-helloworld-python.git
              revision: master
          template:
            name: kaniko
            arguments:
              - name: IMAGE
                value: docker.io/toyking/app-from-source-v1:latest
      revisionTemplate:
        spec:
          container:
            image: docker.io/toyking/app-from-source-v1:latest
            env:
              - name: TARGET
                value: "Python Sample v1"
