deploy/route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: helloworld-python # The name of our route; appears in the URL to access the app
  namespace: default # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
  - revisionName: helloworld-python-00000
    percent: 100 # All traffic goes to this revisionZ
